// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BccTable > can render a custom table cell 1`] = `
"<div class=\\"bcc-table-wrapper\\">
  <table class=\\"bcc-table\\">
    <thead>
      <tr class=\\"bcc-table-header-row\\">
        <th scope=\\"col\\" class=\\"bcc-table-header bcc-table-header-sortable\\">
          <div class=\\"bcc-table-header-content\\">Year group <button aria-label=\\"Sort column\\" class=\\"bcc-table-header-sort\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 -960 960 960\\" fill=\\"currentColor\\" class=\\"bcc-table-header-sort-icon bcc-table-header-sort-icon-undetermined\\">
                <path d=\\"M360-440q-17 0-28.5-11.5T320-480v-247l-75 75q-11 11-27.5 11T189-652q-12-12-12-28.5t12-28.5l143-143q6-6 13-8.5t15-2.5q8 0 15 2.5t13 8.5l144 144q12 12 11.5 28T531-652q-12 11-28 11.5T475-652l-75-75v247q0 17-11.5 28.5T360-440ZM600-97q-8 0-15-2.5t-13-8.5L428-252q-12-12-11.5-28t12.5-28q12-11 28-11.5t28 11.5l75 75v-247q0-17 11.5-28.5T600-520q17 0 28.5 11.5T640-480v247l75-75q11-11 27.5-11t28.5 11q12 12 12 28.5T771-251L628-108q-6 6-13 8.5T600-97Z\\"></path>
              </svg>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </th>
        <th scope=\\"col\\" class=\\"bcc-table-header bcc-table-header-sortable\\">
          <div class=\\"bcc-table-header-content\\">Name <button aria-label=\\"Sort column\\" class=\\"bcc-table-header-sort\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 -960 960 960\\" fill=\\"currentColor\\" class=\\"bcc-table-header-sort-icon bcc-table-header-sort-icon-undetermined\\">
                <path d=\\"M360-440q-17 0-28.5-11.5T320-480v-247l-75 75q-11 11-27.5 11T189-652q-12-12-12-28.5t12-28.5l143-143q6-6 13-8.5t15-2.5q8 0 15 2.5t13 8.5l144 144q12 12 11.5 28T531-652q-12 11-28 11.5T475-652l-75-75v247q0 17-11.5 28.5T360-440ZM600-97q-8 0-15-2.5t-13-8.5L428-252q-12-12-11.5-28t12.5-28q12-11 28-11.5t28 11.5l75 75v-247q0-17 11.5-28.5T600-520q17 0 28.5 11.5T640-480v247l75-75q11-11 27.5-11t28.5 11q12 12 12 28.5T771-251L628-108q-6 6-13 8.5T600-97Z\\"></path>
              </svg>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </th>
        <th scope=\\"col\\" class=\\"bcc-table-header bcc-table-header-sortable\\">
          <div class=\\"bcc-table-header-content\\">Progress <button aria-label=\\"Sort column\\" class=\\"bcc-table-header-sort\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 -960 960 960\\" fill=\\"currentColor\\" class=\\"bcc-table-header-sort-icon bcc-table-header-sort-icon-undetermined\\">
                <path d=\\"M360-440q-17 0-28.5-11.5T320-480v-247l-75 75q-11 11-27.5 11T189-652q-12-12-12-28.5t12-28.5l143-143q6-6 13-8.5t15-2.5q8 0 15 2.5t13 8.5l144 144q12 12 11.5 28T531-652q-12 11-28 11.5T475-652l-75-75v247q0 17-11.5 28.5T360-440ZM600-97q-8 0-15-2.5t-13-8.5L428-252q-12-12-11.5-28t12.5-28q12-11 28-11.5t28 11.5l75 75v-247q0-17 11.5-28.5T600-520q17 0 28.5 11.5T640-480v247l75-75q11-11 27.5-11t28.5 11q12 12 12 28.5T771-251L628-108q-6 6-13 8.5T600-97Z\\"></path>
              </svg>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class=\\"bcc-table-cell\\"><span>22/23</span></td>
        <td class=\\"bcc-table-cell\\">Custom name content</td>
        <td class=\\"bcc-table-cell\\"><span>25</span></td>
      </tr>
      <tr>
        <td class=\\"bcc-table-cell\\"><span>23/24</span></td>
        <td class=\\"bcc-table-cell\\">Custom name content</td>
        <td class=\\"bcc-table-cell\\"><span>42</span></td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`BccTable > renders data in a table 1`] = `
"<div class=\\"bcc-table-wrapper\\">
  <table class=\\"bcc-table\\">
    <thead>
      <tr class=\\"bcc-table-header-row\\">
        <th scope=\\"col\\" class=\\"bcc-table-header bcc-table-header-sortable\\">
          <div class=\\"bcc-table-header-content\\">Year group <button aria-label=\\"Sort column\\" class=\\"bcc-table-header-sort\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 -960 960 960\\" fill=\\"currentColor\\" class=\\"bcc-table-header-sort-icon bcc-table-header-sort-icon-undetermined\\">
                <path d=\\"M360-440q-17 0-28.5-11.5T320-480v-247l-75 75q-11 11-27.5 11T189-652q-12-12-12-28.5t12-28.5l143-143q6-6 13-8.5t15-2.5q8 0 15 2.5t13 8.5l144 144q12 12 11.5 28T531-652q-12 11-28 11.5T475-652l-75-75v247q0 17-11.5 28.5T360-440ZM600-97q-8 0-15-2.5t-13-8.5L428-252q-12-12-11.5-28t12.5-28q12-11 28-11.5t28 11.5l75 75v-247q0-17 11.5-28.5T600-520q17 0 28.5 11.5T640-480v247l75-75q11-11 27.5-11t28.5 11q12 12 12 28.5T771-251L628-108q-6 6-13 8.5T600-97Z\\"></path>
              </svg>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </th>
        <th scope=\\"col\\" class=\\"bcc-table-header bcc-table-header-sortable\\">
          <div class=\\"bcc-table-header-content\\">Name <button aria-label=\\"Sort column\\" class=\\"bcc-table-header-sort\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 -960 960 960\\" fill=\\"currentColor\\" class=\\"bcc-table-header-sort-icon bcc-table-header-sort-icon-undetermined\\">
                <path d=\\"M360-440q-17 0-28.5-11.5T320-480v-247l-75 75q-11 11-27.5 11T189-652q-12-12-12-28.5t12-28.5l143-143q6-6 13-8.5t15-2.5q8 0 15 2.5t13 8.5l144 144q12 12 11.5 28T531-652q-12 11-28 11.5T475-652l-75-75v247q0 17-11.5 28.5T360-440ZM600-97q-8 0-15-2.5t-13-8.5L428-252q-12-12-11.5-28t12.5-28q12-11 28-11.5t28 11.5l75 75v-247q0-17 11.5-28.5T600-520q17 0 28.5 11.5T640-480v247l75-75q11-11 27.5-11t28.5 11q12 12 12 28.5T771-251L628-108q-6 6-13 8.5T600-97Z\\"></path>
              </svg>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </th>
        <th scope=\\"col\\" class=\\"bcc-table-header bcc-table-header-sortable\\">
          <div class=\\"bcc-table-header-content\\">Progress <button aria-label=\\"Sort column\\" class=\\"bcc-table-header-sort\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 -960 960 960\\" fill=\\"currentColor\\" class=\\"bcc-table-header-sort-icon bcc-table-header-sort-icon-undetermined\\">
                <path d=\\"M360-440q-17 0-28.5-11.5T320-480v-247l-75 75q-11 11-27.5 11T189-652q-12-12-12-28.5t12-28.5l143-143q6-6 13-8.5t15-2.5q8 0 15 2.5t13 8.5l144 144q12 12 11.5 28T531-652q-12 11-28 11.5T475-652l-75-75v247q0 17-11.5 28.5T360-440ZM600-97q-8 0-15-2.5t-13-8.5L428-252q-12-12-11.5-28t12.5-28q12-11 28-11.5t28 11.5l75 75v-247q0-17 11.5-28.5T600-520q17 0 28.5 11.5T640-480v247l75-75q11-11 27.5-11t28.5 11q12 12 12 28.5T771-251L628-108q-6 6-13 8.5T600-97Z\\"></path>
              </svg>
              <!--v-if-->
              <!--v-if-->
            </button></div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td class=\\"bcc-table-cell\\"><span>22/23</span></td>
        <td class=\\"bcc-table-cell\\"><span>Ada Lovelace</span></td>
        <td class=\\"bcc-table-cell\\"><span>25</span></td>
      </tr>
      <tr>
        <td class=\\"bcc-table-cell\\"><span>23/24</span></td>
        <td class=\\"bcc-table-cell\\"><span>Firmus Piett</span></td>
        <td class=\\"bcc-table-cell\\"><span>42</span></td>
      </tr>
    </tbody>
  </table>
</div>"
`;
